kustomization/overlays/prod/argocd-mcp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-mcp-svc
spec:
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: argocd-mcp
  type: ClusterIP
